Fixed z-index issue on homepage

--- a/_sass/base/_wrapper.scss
+++ b/_sass/base/_wrapper.scss
@@ -27,6 +27,7 @@
     margin: 0 auto;
     position: relative;
     padding: 0 auto 8em auto;
+    z-index: 1;
 
     @media (max-width: $breakpointLarge) {
         width: 66.6%;
