--- a/_sass/components/_background.scss
+++ b/_sass/components/_background.scss
@@ -25,7 +25,7 @@
 }
 
 [class*='shape-square'] {
-    z-index: -1;
+
     position: absolute;
     transition: all $colorChangeTime ease;
     height: 18px;
@@ -36,7 +36,7 @@
 }
 
 [class*='shape-circle'] {
-    z-index: -1;
+
     position: absolute;
     height: 18px;
     width: 18px;
@@ -48,7 +48,7 @@
 }
 
 [class*='shape-triangle'] {
-    z-index: -1;
+    
     position: absolute;
     transition: all $colorChangeTime ease;
     width: 0;
