--- a/_sass/components/_work.scss
+++ b/_sass/components/_work.scss
@@ -1,5 +1,6 @@
 .work {
 	@extend %clearfix;
+	z-index: 1;
 }
 
 .final {
